# isolarail

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DESIGN.md  INSTALL.md  Justfile  Makefile  PRODUCT.md  README.md  TCA6424_Pin_Connections.md  build.ref.rs  build.rs  commitlint.config.cjs  convert_png_to_rgb565.py  flash_viewer.html  generate_correct_images.py  generate_startup_screen.py  lefthook.yml  mcu-agentd.toml  package.json  process_startup_image.py  rustfmt.toml  test_joystick.rs  test_joystick_debounce.rs  test_joystick_timing.rs
.cargo/: config.toml
.codex-artifacts/design-previews/: docs-preview.html  docs-style-card.html  docs-style-dark.html  font-probe.html  logo-type-spec.css  logo-variants-board.html  web-preview.html  web-style-card.html  web-style-light.html
.github/workflows/: README.md  check.yml  dev-release.yml  docs-pages.yml  notify-release-failure.yml  release.yml
.serena/: project.yml
assets/: README.md  fa7-solid_closed-captioning.raw  fluent_plug-disconnected-16-filled.raw  rivet-icons_close-circle-solid.raw
docs/: ESP32-S3FH4R2_GPIO_Assignment_Guide.md  brand_assets.md  ch32v003_i2c_gpioexp_vs_tca9535.md  ch335f_tca6408a_appnote.md  dashboard_spec.md  development_notes.md  environment-variables.md  esp32-s3fh4r2_gpio_assignment_guide.md  five-way-joystick.md  flash_data_solution.md  hardware_connection_overview.md  i2c_gpio_expanders_comparison.md  joystick-debounce-implementation.md  joystick-port-selection.md  power-allocation.md  power_management_and_startup_control.md  power_on_troubleshooting.md  pwm_fan_control_circuit_design.md  software_design.md  usb-communication-control.md
docs-site/: DESIGN.md  PRODUCT.md  package.json  rspress.config.ts  tsconfig.json
docs-site/docs/: index.mdx
docs-site/docs/en/: _nav.json  index.mdx
docs-site/docs/public/: CNAME  site.webmanifest
docs-site/docs/zh/: _nav.json  index.mdx
docs-site/src/components/: BuzzerAudioPreview.tsx
docs-site/styles/: global.css
docs-site/theme/: DocsNavTitle.tsx  DocsSwitchAppearance.tsx  DocsSwitchAppearanceCss.test.ts  DocsThemeFigure.tsx  appearanceTransition.test.ts  appearanceTransition.ts  index.tsx  themeAlias.test.ts
docs/assets/: dashboard_wireframe_160x50_disconnected.pbm
docs/assets/brand/: README.md
docs/hardware/: front_panel_netlist.enet.enet  ip6557_output_module_netlist.enet.enet  mainboard_netlist.enet.enet
docs/plan/: README.md
docs/plan/j6nvw-hw-v3-pin-assignment/: PLAN.md  hardware_v3_pin_assignment.md
docs/solutions/firmware/: esp32-s3-ledc-passive-buzzer.md
docs/solutions/hardware/: ch335f-eeprom-bus-isolation.md
docs/specs/: README.md
docs/specs/5f74j-firmware-boot-self-check/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/7gf6b-firmware-buzzer-audio/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/b8r3n-brand-visual-assets/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/e5nyr-release-failure-telegram-alerts/: SPEC.md
docs/specs/h8c4s-ch335f-sideband-power-control/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/j6nvw-hardware-v3-pin-assignment/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/m7gtw-ch335f-eeprom-initializer/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/n8x4q-hardware-diag-snapshot/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/pw97u-control-plane-alignment/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/q9d7h-cli-devd-flash-migration/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/r6wfr-docs-site/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/xhn4c-hardware-v3-adjustments/: SPEC.md
docs/ui/: dashboard_spec.md  dashboard_wireframe_160x50.pbm
examples/: bitmap_flasher.rs  bitmap_flasher.rs.disabled  flash_combined_images.rs  flash_display_test.rs  flash_new_bitmap.rs  flash_only_verify.rs  generate_startup_screen.rs  simple_flash_bitmap.rs  simple_flash_verify.rs  verify_checkerboard.rs  verify_flash.rs
scripts/: assemble-site-artifact.mjs  colorize_dashboard_svgs.py  gen_dashboard_wireframe_pbm.py  generate_brand_assets.py
src/: app.rs  audio_logic.rs  boot_diag.rs  buzzer.rs  device_contract.rs  device_identity.rs  fan.rs  front_panel.rs  hardware.rs  hardware_snapshot.rs  http_api_v1.rs  hub_sideband.rs  joystick_example.rs  lib.rs  main.rs  mdns.rs  net.rs  network_runtime.rs  power_in.rs  provisioning.rs  runtime_control.rs  usb_jsonl.rs
src/display/: dashboard.rs  font.rs  mod.rs
src/net/: http.rs  http_response.rs  names_config.rs
tmp/imagegen/isolarail-docs-hero/: candidate-a.prompt  (+6 more)
tools/: flash_bitmap.rs  flash_hello_world  flash_hello_world.rs  hello_world_bitmap  hello_world_bitmap.rs  hello_world_visual.txt  isohub-runner  png_to_bitmap_140x40.rs  simulate_main_app  simulate_main_app.rs  startup_bitmap_140x40  startup_bitmap_140x40.rs  startup_diagnostic.rs  test_bitmap_colors  test_bitmap_colors.rs  test_hello_world_memory  test_hello_world_memory.rs  watchdog_test.rs
tools/buzzer_audio_preview/: README.md  generate_assets.py  index.html
tools/dashboard_preview/: Cargo.toml
tools/firmware-catalog/: build-catalog.py
tools/flash_programmer/: Cargo.toml
tools/flash_test_image/: Cargo.toml
tools/flash_test_image/src/: main.rs
tools/icon2raw/: Cargo.toml
tools/iso-usb-hub-host/: Cargo.toml
tools/isohub-companion/: Cargo.toml
tools/isolarail-companion/: Cargo.toml  rust-toolchain.toml
tools/isolarail-companion/install/: install-isolarail-companion.ps1  install-isolarail-companion.sh
tools/isolarail-companion/scripts/: devd-bin.sh
tools/isolarail-companion/src/: lib.rs
tools/isolarail-companion/src/lib/: device_io.rs  http_bridge.rs  ipc.rs  storage_catalog.rs
tools/png2raw/: Cargo.toml
web/: .gitignore  DESIGN.md  PRODUCT.md  README.md  biome.json  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/.storybook/: main.ts  preview.tsx
web/e2e/: app.spec.ts
web/public/: site.webmanifest
web/scripts/: copy-404.ts  test-storybook.ts
web/src/: App.tsx  hardwareSnapshot.test.ts  hardwareSnapshot.ts  index.css  main.tsx
(+99 files in other folders)
