[package]
name = "esp32s3-hello-world"
version = "0.1.0"
authors = ["Ivan Li<ivanli2048@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-println = { version = "0.15.0", features = ["esp32s3"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
