[package]
name = "esp32s3-hello-world"
version = "0.1.0"
authors = ["Ivan Li<ivanli2048@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embassy-sync = "0.7.0"
static_cell = "2.1.0"
nb = "1.1"
heapless = { version = "0.8", default-features = false }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2", default-features = false }
embassy-embedded-hal = "0.4"
xca9548a = "1"
port-expander = "0.6"
sc8815 = { git = "https://github.com/IvanLi-CN/sc8815-rs", default-features = false, features = ["async"] }
sw2303 = { git = "https://github.com/IvanLi-CN/sw2303-rs", default-features = false, features = ["async"] }
defmt = "1"
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-println = { version = "0.15.0", features = ["esp32s3", "defmt-espflash"] }

#[profile.release] duplicated below; keep single definition

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
