[package]
name = "isolarail"
version = "0.1.0"
authors = ["Ivan Li<ivanli2048@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
heapless = { version = "0.9.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

[target.'cfg(target_arch = "xtensa")'.dependencies]
embassy-executor = "0.7.0"
embassy-time = "0.4.0"
embassy-time-net = { package = "embassy-time", version = "0.5.1", default-features = false }
embassy-sync = "0.6.2"
embassy-net = { version = "0.7.1", default-features = false, features = ["defmt", "dhcpv4", "medium-ethernet", "proto-ipv4", "tcp", "udp", "multicast"] }
static_cell = "2.1.1"
nb = "1.1"
heapless08 = { package = "heapless", version = "0.8", default-features = false }
embedded-hal = "1.0.0"
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", default-features = false }
embassy-embedded-hal = "0.3.2"
embassy-futures = "0.1.2"
esp-alloc = { version = "0.8.0", default-features = false, features = ["defmt"] }
esp-wifi = { version = "0.15.1", default-features = false, features = ["builtin-scheduler", "defmt", "esp-alloc", "esp32s3", "wifi"] }
xca9545a-async = { git = "https://github.com/IvanLi-CN/xca9545a-async-rs", rev = "7bcc109c70d202ce7d3554e3a7755d5f3eb24330", default-features = false, features = ["async"] }
port-expander = "0.6"
ina226-tp = { version = "0.4", default-features = false, features = ["async"] }
defmt = "1"
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-println = { version = "0.15.0", default-features = false, features = ["esp32s3", "jtag-serial", "defmt-espflash"] }

# Display driver and drawing
# Use local submodule for GC9D01 with panel_160x50 tuning.
gc9d01 = { path = "gc9d01", default-features = false, features = ["defmt", "panel_160x50", "async"] }
embedded-graphics = { version = "0.8", default-features = false }

#[profile.release] duplicated below; keep single definition

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[features]
