[package]
name = "flash_test_image"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy framework
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32g431cb",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

# Hardware abstraction
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }

# Logging and debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Memory management
embedded-alloc = "0.5.1"
static_cell = "2.1"
heapless = "0.8"

# Hardware drivers
w25q32jv = { version = "0.4.0", features = ["async"] }

# Cortex-M
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

[[bin]]
name = "flash_test_image"
test = false
bench = false

[profile.release]
debug = 2
