[package]
name = "isolarail-companion"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
directories = "5"
dialoguer = "0.12"
mdns-sd = "0.17.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui = "0.30.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "isolarail-devd"
path = "src/bin/isolarail-devd.rs"

[[bin]]
name = "isolarail"
path = "src/bin/isolarail.rs"
